infra/frontend/frontend-app-service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: frontend-svc
# spec:
#   selector:
#     app: frontend
#   ports:
#     - name: http
#       protocol: TCP
#       port: 3000
#       targetPort: 80
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      nodePort: 32001
